--- a/src/Components/Styles/Popular.module.css
+++ b/src/Components/Styles/Popular.module.css
@@ -7,8 +7,7 @@
 .container {
   width: 100%;
   height: 400px;
-  /* background: rgb(228, 227, 227); */
-  background-color: #f3eeee; /*#052044*/
+  background-color: #f3eeee;
   color: black;
   padding: 10px 50px;
 }
@@ -27,16 +26,16 @@
   align-items: center;
   gap: 5px;
   border: none;
-  border-radius: 20px;
+  border-radius: 25px;
 }
 
 .btnContainer button {
   border: none;
   cursor: pointer;
-  font-size: 14px;
-  padding: 8px 15px;
+  font-size: 16px;
+  padding: 6px 15px;
   border-radius: inherit;
-  transition: all 0.3s linear;
+  transition: all 0.2s linear;
   font-weight: 600;
 }
 
@@ -46,10 +45,10 @@
 }
 
 .btnContainer button:active {
-  transform: scale(0.8, 0.8);
+  transform: scale(0.99, 0.99);
 }
 
-.skeletonDiv {
+.LoadingDiv {
   width: 100%;
   height: 220px;
   display: flex;
@@ -57,6 +56,21 @@
   align-items: center;
   gap: 20px;
   margin-top: 20px;
+}
+
+.loader {
+  width: 60px;
+  aspect-ratio: 6;
+  background: radial-gradient(circle closest-side, #000 90%, #0000) 0 /
+    calc(100% / 3) 100% space;
+  clip-path: inset(0 100% 0 0);
+  animation: l1 1s steps(4) infinite;
+}
+
+@keyframes l1 {
+  to {
+    clip-path: inset(0 -34% 0 0);
+  }
 }
 
 .sliderContainer {
@@ -85,20 +99,6 @@
 .poster:hover {
   transform: scale(1.01, 1.01);
   box-shadow: 0 20px 10px -10px #818080;
-}
-
-.loader {
-  width: 60px;
-  aspect-ratio: 6;
-  background: radial-gradient(circle closest-side, #000 90%, #0000) 0 /
-    calc(100% / 3) 100% space;
-  clip-path: inset(0 100% 0 0);
-  animation: l1 1s steps(4) infinite;
-}
-@keyframes l1 {
-  to {
-    clip-path: inset(0 -34% 0 0);
-  }
 }
 
 /* Tablet screen size */
