--- a/src/Components/Styles/Search.module.css
+++ b/src/Components/Styles/Search.module.css
@@ -75,18 +75,14 @@
   transform: scale(1.05, 1.05);
 }
 
-.posterContainer:hover .info {
-  opacity: 1;
-}
-
 .info {
   border-radius: inherit;
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100.1%;
-  height: 100.2%;
-  background-color: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
   padding: 10px;
   font-size: 14px;
   color: white;
@@ -140,23 +136,30 @@
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
+  width: 100%;
 }
 
 .nextBtn,
-.prevBtn {
+.prevBtn,
+.firstPageBtn,
+.lastPageBtn {
   font-size: 30px;
   cursor: pointer;
   transition: all 0.2s linear;
 }
 
 .nextBtn:hover,
-.prevBtn:hover {
+.prevBtn:hover,
+.firstPageBtn:hover,
+.lastPageBtn:hover {
   color: #b157f6;
   transform: scale(1.3, 1.3);
 }
 
 .nextBtn:active,
-.prevBtn:active {
+.prevBtn:active,
+.firstPageBtn:active,
+.lastPageBtn:active {
   transform: scale(0.9, 0.9);
 }
 
@@ -201,5 +204,9 @@
   .posterContainer {
     width: 115px;
     height: 180px;
+  }
+
+  .pageDiv {
+    gap: 10px;
   }
 }
