--- a/src/Components/Styles/Watchlist.module.css
+++ b/src/Components/Styles/Watchlist.module.css
@@ -7,6 +7,7 @@
   height: 100%;
   padding: 20px 0;
   min-height: 400px;
+  margin-bottom: 20px;
 }
 
 .header {
@@ -30,5 +31,6 @@
     max-width: 500px;
     height: 100%;
     padding: 0;
+    margin-bottom: 20px;
   }
 }
