--- a/src/Components/FreeWatch/FreeWatch.css
+++ b/src/Components/FreeWatch/FreeWatch.css
@@ -26,7 +26,7 @@
 }
 
 .button_container {
-  background: white;
+  background: transparent;
   border: none;
   margin: auto 2rem;
   border-radius: 18px;
