--- a/src/Components/Styles/Trending.module.css
+++ b/src/Components/Styles/Trending.module.css
@@ -59,9 +59,8 @@
 
 .wrapper {
   width: 100%;
-  height: 400px;
-  background: rgb(228, 227, 227);
-  background-color: rgb(243, 238, 238); /*#052044*/
+  height: 420px;
+  background-color: #f3eeee;
   color: black;
   padding: 10px 50px;
 }
@@ -75,7 +74,7 @@
 }
 
 .top h2 {
-  padding-top: 8px;
+  padding: 8px 0;
 }
 
 /* ===== Poster image link ===== */
